--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -2,7 +2,8 @@
   <span
     ng-repeat="link in $ctrl.links">
     <a
-      href="{{link.href}}">
+      href="{{link.href}}"
+      ng-class="$ctrl.linkClass">
       {{link.text}}
     </a>&nbsp;&nbsp;</span>
   </span>
